# spam_filter

./: .gitignore  README.md  requirements.txt  setup.cfg
spam_filter/: app.py  create_classes.py  create_docbins.py  extract_from_corpus.py  predict.py  test.py  train_email_object_model.py  train_model.py  train_text_model.py
spam_filter/data_processing/: __init__.py  emailextract.py  settings.py
spam_filter/data_processing/corpus/: __init__.py  _enron_index.csv  _ling_index.csv  corpus_extractor.py  enron.py  ling.py  trec.py
spam_filter/data_processing/preprocessing/: __init__.py  data_loading.py  email_cleaning.py  email_cleaning_pipelines.py  test_set_creation.py
spam_filter/data_processing/spacy/: __init__.py  dochandling.py  lemmatizer.py
spam_filter/index_creation/: _make_enron_index.py  _make_ling_index.py
spam_filter/templates/: file.html  landing.html  results.html  text.html
tests/data_processing/preprocessing/: test_email_cleaning.py
