[metadata]
name = data_processing
version = 1.2.1

[options]
package_dir = 
    =spam_filter
packages = find:
include_package_data = True
install_requires =
    beautifulsoup4 == 4.11.1
    spacy == 3.4.3
    en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl

[options.packages.find]
where = spam_filter
include = data_processing*
exclude = 
    data_processing.corpus*
    data_processing.preprocessing*
